--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,34 +2,20 @@
 layout: default
 ---
 
-<article class="card">
-
-    <div>
-        {{ content | replace: "\", "<br />" }}
-    </div>
-
-    {% if page.images %}
-        {% for image in page.images %}
-        <figure>
-            {% include components/image.html image=image.url alt=image.alt style="card" %}
-            {% if image.caption %}
-                <figcaption>
-                    {{ image.caption }}
-                </figcaption>
-            {% endif %}
-        </figure>
-        {% endfor %}
-    {% endif %}
-
-</article>
-
 {% for page-item in page.pages %}
+
 {% assign item = site.pages | where:"permalink", page-item.url | first %}
+
 {% if item.layout == "page" %}
 {% include page.html page=item %}
+
 {% elsif item.layout == "projects" %}
 {% include projects.html page=item %}
+
+{% elsif item.layout == "card" %}
+{% include card.html page=item %}
 {% endif %}
+
 {% endfor %}
 
 
