cloned base-jekyll-prototype

--- a/_assets/css/components/_page.scss
+++ b/_assets/css/components/_page.scss
@@ -64,6 +64,10 @@
 
         aside {
             flex-basis: 35%;
+
+            figure {
+                margin: $spacing-medium 0;
+            }
         }
 
     }
