cloned base-jekyll-prototype

--- a/_assets/css/components/_projects.scss
+++ b/_assets/css/components/_projects.scss
@@ -17,7 +17,7 @@
             background-color: lighten($color-silver, 10);
             text-align: center;
 
-            & > * {
+            * {
                 margin-top: 0
             }
         }
