--- a/_assets/css/components/_card.scss
+++ b/_assets/css/components/_card.scss
@@ -70,7 +70,7 @@
 
         div {
             order: 0;
-            padding: $spacing-huge * 2;
+            padding: $spacing-huge + $spacing-medium;
         }
 
         figure.wide {
