--- a/_assets/css/components/_card.scss
+++ b/_assets/css/components/_card.scss
@@ -13,7 +13,7 @@
             }
 
         }
-
+        
         figure {
             flex: 1 50%;
         }
@@ -67,10 +67,14 @@
         div {
             flex-basis: 33%;
         }
-
+        
+        h1 {
+            margin-top: 0;
+        }
+        
         div {
             order: 0;
-            padding: $spacing-huge + $spacing-medium;
+            padding: $spacing-huge $spacing-huge + $spacing-medium $spacing-large;
         }
 
         figure.wide {
