--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   <meta property="og:site_name" content="{{ site.data.info.title  }}" />
   <meta property="og:type" content="{{ page.og-type }}" />
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  <meta property="og:image" content="{{ site.url }}{% asset 'plan.jpg' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}" />
+  <meta property="og:image" content="{{ site.url }}{% asset '{{ site.data.info.image  }}' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
