--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     <div id="vcard" class="vcard">
 
         {% assign info = site.data.info %}
-        <img class="photo hidden" src="{% asset 'plan.jpg' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}"/>
+        <img class="photo hidden" src="{% asset '{{ site.data.info.image }}' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}"/>
         {% if info.name %}<span class="fn org hidden">{{ info.name }}</span>{% endif %}
 
         {% if info.street or info.postal or info.locality %}
