--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="{{ site.lang }}">
 
   {% include head.html %}
 
@@ -13,15 +13,11 @@ layout: compress
 
     {% include header.html %}
 
-    {% include banner.html %}
-
     <main id="main">
       {{ content }}
     </main>
 
-    <footer id="footer">
-        <span>Design & Development by Bert Bruggeman</span>
-    </footer>
+    {% include footer.html %}
 
     {% include scripts.html %}
 
