cloned base-jekyll-prototype

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,22 +9,22 @@
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
-             "@type": "LocalBusiness",
+            "@type": "LocalBusiness",
             "image": "{% asset '{{ site.data.info.image | remove: "/media/" }}' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}",
-            "priceRange" : "",
              "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "{{ site.data.info.street }} ",
-            "addressLocality": "{{ site.data.info.locality }}",
-            "postalCode":"{{ site.data.info.postal }}",
-            
+                "@type": "PostalAddress",
+                "streetAddress": "{{ site.data.info.street }} ",
+                "addressLocality": "{{ site.data.info.locality }}",
+                "postalCode":"{{ site.data.info.postal }}"
              },
              "description": "{{ site.data.info.description }}",
              "name": "{{ site.data.info.name }}",
              "telephone": "{{ site.data.info.phone }}{{ site.data.info.mobile }}",
              "email": "{{ site.data.info.email }}",
-            "url": "{{ site.data.info.website }}",
-        },
+            "url": "{{ site.data.info.website }}"
+        }
+    </script>
+    <script type="application/ld+json">
         {
             "@type":"{{ page.schema }}",
             "headline":"{{ page.meta.title }}",
