--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
         {
             "@context": "http://schema.org",
             "@type": "LocalBusiness",
-            "image": "{% asset '{{ site.data.info.image | remove: "/media/" }}' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}",
+            "image": "{{ site.url }}/{% asset '{{ site.data.info.image | remove: "/media/" }}' @path magick:resize=1200^x1200^ magick:crop=1200x1200+0+0 magick:quality=75 magick:compress=jpeg %}",
              "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "{{ site.data.info.street }} ",
@@ -21,7 +21,7 @@
              "name": "{{ site.data.info.name }}",
              "telephone": "{{ site.data.info.phone }}{{ site.data.info.mobile }}",
              "email": "{{ site.data.info.email }}",
-            "url": "{{ site.data.info.website }}"
+            "url": "{{ site.url }}"
         }
     </script>
     <script type="application/ld+json">
