--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,11 +4,12 @@
 {% asset js/frontpage async:true !type %}
 {% endif %}
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116825040-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-116825040-1');
+(function(e,t,n,i,s,a,c){e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)}
+;a=t.createElement(i);c=t.getElementsByTagName(i)[0];a.async=true;a.src=s
+;c.parentNode.insertBefore(a,c)
+})(window,document,"galite","script","https://cdn.jsdelivr.net/npm/ga-lite@2/dist/ga-lite.min.js");
+galite('create', 'UA-116825040-1', 'auto');
+galite('send', 'pageview');
 </script>
+
