--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
 
     {% include scripts.html %}
 
-    {% asset css/non-critical !type %}
+    {% asset css/non-critical %}
 
   </body>
 </html>
